test/good/arrays/empty05.px

func f(a: [Int], b: [[Int]]): [Float]*[[Int]] def
    return [], [[]]

print f([], []).a.length
